# snippext

./: .editorconfig  .gitignore  .shellcheckrc  Cargo.toml  LICENSE  NOTICE  README.md  TODO.md  rustfmt.toml  snippext.yaml
.github/workflows/: CI.yaml  release.yaml
ci/: install.sh  upload.sh
readme-snippets/: main.rs  snippext_attributes.rs
src/: cli.rs  constants.rs  default_snippext_config.yaml  error.rs  files.rs  git.rs  lib.rs  main.rs  sanitize.rs  settings.rs  templates.rs  types.rs  unindent.rs
src/cmd/: clear.rs  extract.rs  init.rs  mod.rs
tests/: .env.test  custom_multiple_template_snippext.yaml  custom_snippext.yaml  main.cs  main_test.rs  snippet_left_open.rs
tests/samples/: custom_prefix.rb  main.rs  no_snippets.rs  retain_nested_comments.rs  sample_file.rs
tests/targets/: file_snippet.md  highlighted_lines.md  selected_lines.md  selected_lines_with_ellipsis.md  specify_template.md  target.md  url_snippet.md
tests/templates/: default.tmpl
