[package]
name = "snippext"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/doctavious/snippext"
keywords = ["snippet"]
categories = ["documentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "snippext"
#path = "src/lib.rs"
#[[bin]]
#name = "snippext-cli"
#path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.26"
clap = { version = "4.3", features = ["derive"] }
# https://github.com/mehcode/config-rs/blob/master/examples/hierarchical-env/src/settings.rs
config = "0.13.3" # vs figment
filetime = "0.2.21"
git2 = "0.16.0"
glob = "0.3"
handlebars = "4.3"
lazy_static = "1"
regex = { version = "1", default-features = false, features = ["std", "unicode-case"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
thiserror = "1.0"
tracing = "0.1"
url = "2.4"

#dialoguer = "0.9.0"
inquire = "0.5.3"

#requestty = "0.1.3"

[dev-dependencies]
dotenv = "0.15"
tempfile = "3"
