[package]
name = "snippext"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/doctavious/snippext"
keywords = ["snippet"]
categories = ["documentation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "snippext"
#path = "src/lib.rs"
#[[bin]]
#name = "snippext-cli"
#path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.26"
clap = { version = "4.3", features = ["derive"] }
config = { version = "0.13.3", features = ["json"] }
filetime = "0.2.21"
git2 = "0.16.0"
glob = "0.3"
handlebars = "4.3"
inquire = { version = "0.6.2", features = ["editor"] }
lazy_static = "1"
regex = { version = "1", default-features = false, features = ["std", "unicode-case"] }
remain = "0.2.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
tempfile = "3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
walkdir = "2"


[dev-dependencies]
dotenv = "0.15"
tracing-test = "0.2"
