[package]
name = "snippext"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/doctavious/snippext"
keywords = ["documentation", "snippet"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#name = "snippext"
#path = "src/lib.rs"
#[[bin]]
#name = "snippext-cli"
#path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.26"
clap = { version = "4.4", features = ["derive"] }
config = { version = "0.13.3", features = ["json", "json5", "toml", "yaml"] }
filetime = "0.2.21"
git2 = "0.17.2"
glob = "0.3"
handlebars = "4.3"
hyperpolyglot = "0.1.7"
indexmap = { version = "2.0.0", features = ["serde"] }
inquire = { version = "0.6.2", features = ["editor"] }
lazy_static = "1"
regex = { version = "1", default-features = false, features = ["std", "unicode-case"] }
remain = "0.2.11"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_yaml = "0.9"
# openssl = { version = "0.10", features = ["vendored"] } # Make GitHub actions happy
tempfile = "3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4"
walkdir = "2"


[dev-dependencies]
dotenv = "0.15"
tracing-test = "0.2"
